# acp-agent-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SKILL.md
.github/workflows/: release.yml
npm/main/: README.md  package.json
release/: config.json
scripts/release/: local-build-utils.mjs  publish-npm-packages.mjs  rehearse.mjs  sync-platform-packages.mjs
src/: acp.rs  context.rs  daemon.rs  help.rs  lib.rs  main.rs  plan.rs  plan_data.yml  registry.rs  repl.rs  stream.rs  transport.rs
tests/: cli_test.rs  context_parser_regressions.rs  daemon_regression.rs
